<resources>
    <string name="app_name" translatable="false">Antipayment Guard</string>

    <string name="dialog_pay_cards_options_activity_main_view">View</string>
    <string name="dialog_pay_cards_options_activity_main_edit">Edit</string>
    <string name="dialog_pay_cards_options_activity_main_delete">Delete</string>
    <string name="dialog_pay_cards_options_activity_main_cancel">Cancel</string>

    <string name="title_activity_add_pay_card">Add Pay Card</string>
    <string name="name">Name</string>
    <string name="bank" translatable="false">Bank</string>
    <string name="card_no">Card no</string>
    <string name="balance">Balance</string>
    <string name="expiration_date">Expiration date</string>
    <string name="button_activity_add_pay_card_add">Add</string>
    <string name="condition_prompt">Select condition</string>
    <string name="condition_transactions_number">Transactions number</string>
    <string name="condition_transactions_amount">Transactions amount</string>
    <string name="hint_activity_add_pay_card_condition_value">Condition value</string>
    <string name="pay_card_information">Pay card information</string>
    <string name="condition_information">Condition information</string>
    <string name="pay_card_created">New pay card has been added</string>
    <string name="title_activity_pay_card_details">Pay Card Details</string>
    <string name="title_fragment_pay_card_details">Details</string>
    <string name="title_fragment_transactions_list">Transactions</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="transactionDate">Transaction date</string>
    <string name="title_activity_add_pay_card_transaction">Add Transaction</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="condition_type">Condition type</string>
    <string name="condition_status">Condition status</string>
    <string name="title_activity_pay_card_transaction">Transaction details</string>
    <string name="pay_card">Pay card</string>
    <string name="remained">Remained</string>
    <string name="condition_fulfilled">Condition fulfilled</string>
    <string name="currency_name">Currency name</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_deleted">Selected transaction has been removed</string>
    <string name="pay_card_deleted">Selected pay card has been removed</string>
    <string name="backup">Backup to Google Drive</string>
    <string name="load">Load from Google Drive</string>
    <string name="restore_error">Error while trying to restore the database</string>
    <string name="restore_success">Database have been restored\nRestart app to see changes</string>
    <string name="backup_error">Error while trying to create the file</string>
    <string name="backup_success">Database backup successful</string>
    <string name="condition_not_fulfilled">Condition not fulfilled</string>
    <string name="not_valid">Can\'t be empty</string>
</resources>
