<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddPayCardActivity"
    tools:showIn="@layout/activity_add_pay_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/balanceIconIMageView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:src="@drawable/ic_balance_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/balanceTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_toRightOf="@id/balanceIconIMageView"
            android:layout_toEndOf="@id/balanceIconIMageView"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/balanceEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="numberDecimal"

                android:hint="@string/balance"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/placeIconImageView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_below="@id/balanceTextInputLayout"

            android:src="@drawable/ic_bank_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/placeTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/balanceTextInputLayout"
            android:layout_toRightOf="@id/placeIconImageView"
            android:layout_toEndOf="@id/placeIconImageView"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/placeEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:singleLine="true"
                android:hint="@string/bank" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/dateIconImageView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/placeTextInputLayout"
            android:layout_marginTop="20dp"

            android:src="@drawable/ic_date_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/placeTextInputLayout"
            android:layout_toRightOf="@id/dateIconImageView"
            android:layout_toEndOf="@id/dateIconImageView"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateEditText"
                android:hint="@string/expiration_date"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/condition_information"
            android:id="@+id/conditionSectionName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateTextInputLayout"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginTop="25dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/conditionTypeSpinner"
            android:entries="@array/conditions_array"
            android:prompt="@string/condition_prompt"
            android:layout_below="@+id/conditionSectionName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditionTypeSpinner"
            android:id="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/conditionValueEditText"
                android:hint="@string/hint_activity_add_pay_card_condition_value"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</ScrollView>
