<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.PayCardTransactionActivity"
    tools:showIn="@layout/activity_pay_card_transaction">

    <TextView
        android:id="@+id/nameTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"

        android:textSize="@dimen/material_text_display1"
        android:singleLine="true"
        android:text="New Text" />

    <ImageView
        android:id="@+id/payCardIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/nameTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_card_no_24dp"/>

    <TextView
        android:id="@+id/payCardTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/nameTextView"
        android:layout_toRightOf="@id/payCardIconImageView"
        android:layout_toEndOf="@id/payCardIconImageView"

        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text" />

    <TextView
        android:id="@+id/payCardLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/payCardTextView"
        android:layout_toRightOf="@id/payCardIconImageView"
        android:layout_toEndOf="@id/payCardIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/pay_card" />

    <ImageView
        android:id="@+id/amountIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/payCardLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_currency_24dp"/>

    <TextView
        android:id="@+id/amountTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/payCardLabelTextView"
        android:layout_toRightOf="@id/amountIconImageView"
        android:layout_toEndOf="@id/amountIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text"/>

    <TextView
        android:id="@+id/amountLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/amountTextView"
        android:layout_toRightOf="@id/amountIconImageView"
        android:layout_toEndOf="@id/amountIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/amount" />

    <ImageView
        android:id="@+id/dateIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/amountLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_date_24dp"/>

    <TextView
        android:id="@+id/dateTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/amountLabelTextView"
        android:layout_toRightOf="@id/dateIconImageView"
        android:layout_toEndOf="@id/dateIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text"/>

    <TextView
        android:id="@+id/dateLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/dateTextView"
        android:layout_toRightOf="@id/dateIconImageView"
        android:layout_toEndOf="@id/dateIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/date" />

    <ImageView
        android:id="@+id/placeIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/dateLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_place_24dp"/>

    <TextView
        android:id="@+id/placeTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/dateLabelTextView"
        android:layout_toRightOf="@id/placeIconImageView"
        android:layout_toEndOf="@id/placeIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text"/>

    <TextView
        android:id="@+id/placeLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/placeTextView"
        android:layout_toRightOf="@id/placeIconImageView"
        android:layout_toEndOf="@id/placeIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/place" />

    <ImageView
        android:id="@+id/descriptionIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/placeLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_description_24dp"/>

    <TextView
        android:id="@+id/descriptionTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/placeLabelTextView"
        android:layout_toRightOf="@id/descriptionIconImageView"
        android:layout_toEndOf="@id/descriptionIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text"/>

    <TextView
        android:id="@+id/noLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/descriptionTextView"
        android:layout_toRightOf="@id/descriptionIconImageView"
        android:layout_toEndOf="@id/descriptionIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/description" />

</RelativeLayout>
