<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"

        android:textSize="@dimen/material_text_display1"
        android:singleLine="true"
        android:text="New Text" />

    <ImageView
        android:id="@+id/balanceIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/nameTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_balance_24dp"/>

    <TextView
        android:id="@+id/balanceTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/nameTextView"
        android:layout_toRightOf="@id/balanceIconImageView"
        android:layout_toEndOf="@id/balanceIconImageView"

        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text" />

    <TextView
        android:id="@+id/balanceLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/balanceTextView"
        android:layout_toRightOf="@id/balanceIconImageView"
        android:layout_toEndOf="@id/balanceIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/balance" />

    <ImageView
        android:id="@+id/cardNoIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/balanceLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_card_no_24dp"/>

    <TextView
        android:id="@+id/noTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/balanceLabelTextView"
        android:layout_toRightOf="@id/cardNoIconImageView"
        android:layout_toEndOf="@id/cardNoIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text"/>

    <TextView
        android:id="@+id/noLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/noTextView"
        android:layout_toRightOf="@id/cardNoIconImageView"
        android:layout_toEndOf="@id/cardNoIconImageView"

        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:text="@string/card_no" />

    <ImageView
        android:id="@+id/bankNameIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/noLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_bank_24dp"/>

    <TextView
        android:id="@+id/bankNameTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/noLabelTextView"
        android:layout_toRightOf="@id/bankNameIconImageView"
        android:layout_toEndOf="@id/bankNameIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text" />

    <TextView
        android:id="@+id/bankNameLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/bankNameTextView"
        android:layout_toRightOf="@id/bankNameIconImageView"
        android:layout_toEndOf="@id/bankNameIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"

        android:text="@string/bank" />

    <ImageView
        android:id="@+id/expirationDateIconImageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/bankNameLabelTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"

        android:src="@drawable/ic_date_24dp"/>

    <TextView
        android:id="@+id/expirationDateTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/bankNameLabelTextView"
        android:layout_toRightOf="@id/expirationDateIconImageView"
        android:layout_toEndOf="@id/expirationDateIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:textColor="@color/colorText"
        android:textSize="@dimen/material_text_title"
        android:text="New Text" />

    <TextView
        android:id="@+id/expirationDateLabelTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/expirationDateTextView"
        android:layout_toRightOf="@id/expirationDateIconImageView"
        android:layout_toEndOf="@id/expirationDateIconImageView"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"

        android:text="@string/expiration_date" />


</RelativeLayout>